# chess

./: .gitignore  Chess.hs  Heuristics.hs  Makefile  ParseAN.hs  ParseFEN.hs  ParseLAN.hs  chess.hs  main.hs  tests.hs
ooo/: Cargo.toml
ooo/src/: engine.rs  eval.rs  main.rs  piece_tables.rs
