[package]
name = "ooo"
version = "0.1.0"
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
vampirc-uci = { version = "0.11.0", features = ["chess"] }
smallvec = "1.6.1"
